Styling for Home Page, Login, and Create Account

--- a/TermProject/Views/Shared/LoginLayout.cshtml
+++ b/TermProject/Views/Shared/LoginLayout.cshtml
@@ -6,6 +6,7 @@
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
+    <link href="~/css/StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-black">
@@ -51,9 +52,10 @@
         </form>
     </nav>
 
-    
-    @RenderBody() 
+
+    @RenderBody()
     @RenderSection("Scripts", required: false)
 </body>
 </html>
+
 
