--- a/TermProject/Views/Home/Index.cshtml
+++ b/TermProject/Views/Home/Index.cshtml
@@ -50,6 +50,11 @@
                 </div>
             </div>
         </div>
+        <footer class="bg-dark">
+            <div class="container text-light text-center">
+                <h5 class="p-5 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
+            </div>
+        </footer>
     
     </form>
 </body>
