--- a/TermProject/wwwroot/css/StyleSheet.css
+++ b/TermProject/wwwroot/css/StyleSheet.css
@@ -1,8 +1,4 @@
 ﻿body {
-    font-family: cursive;
-    margin: 0;
-    padding: 0;
-    background-color: #f5f5f5;
     text-align: center;
     background-image: url('hearts1.jpg');
 }
@@ -14,6 +10,7 @@
     height: 100vh;
     flex-direction: column;
 }
+
 
 .centered-content {
     border: 2px solid black;
@@ -52,7 +49,7 @@
 }
 
 
-h2 {
+/*h2 {
     font-family: Tahoma;
     font-size: 30px;
     font-weight: bold;
@@ -69,10 +66,10 @@ h1 {
     margin-bottom: 10px;
     text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
 }
+*/
 
 
-
-.btn {
+/*.btn {
     display: inline-block;
     padding: 10px 20px;
     font-size: 16px;
@@ -92,7 +89,7 @@ h1 {
 
     .btn:active {
         background-color: darkred;
-    }
+    }*/
 
 .repeater-container {
     width: 100%;
