--- a/TermProject/Views/Shared/LoggedInLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedInLayout.cshtml
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/css/StyleSheet.css" type="text/css">
     <script src="~/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
 </head>
@@ -17,42 +16,45 @@
             </a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active" style="font-size: 1.25rem; font-family: 'Comic Sans MS'">
-                        <a class="nav-link active" asp-controller="Home" asp-action="Index" id="lnkHome">Home</a>
+                    <li class="nav-item active">
+                        <a class="nav-link active" asp-controller="Dashboard" asp-action="Index" id="lnkHome">Home</a>
                     </li>
-                    <li class="nav-item active" style="font-size: 1.25rem; font-family: 'Comic Sans MS'">
-                        <a class="nav-link active" asp-controller="EditProfile" asp-action="Index" id="lnkEditProfile">My Profile</a>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Main" asp-action="Index" id="lnkMain">
+                            Search
+                        </a>
                     </li>
-                    <li class="nav-item active" style="font-size: 1.25rem; font-family: 'Comic Sans MS'">
-                        <a class="nav-link active" asp-controller="Main" asp-action="Index" id="lnkSearch">Search</a>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">
+                            Likes
+                        </a>
                     </li>
-                    <li class="nav-item active" style="font-size: 1.25rem; font-family: 'Comic Sans MS'">
-                        <a class="nav-link active" asp-controller="Likes" asp-action="Index" id="lnkLikes">Likes</a>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">
+                            Matches
+                        </a>
                     </li>
-                    <li class="nav-item active" style="font-size: 1.25rem; font-family: 'Comic Sans MS'">
-                        <a class="nav-link active" asp-controller="Matches" asp-action="Index" id="lnkMatches">Matches</a>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">
+                            Dates
+                        </a>
                     </li>
-                    <li class="nav-item active" style="font-size: 1.25rem; font-family: 'Comic Sans MS'">
-                        <a class="nav-link active" asp-controller="Dates" asp-action="Index" id="lnkDates">My Dates</a>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Profile" asp-action="Index" id="lnkProfile">
+                            Profile
+                        </a>
                     </li>
                 </ul>
             </div>
         </div>
-        <form asp-controller="Login" asp-action="Index" method="post">
-            <button type="submit" id="btnLogout" class="btn btn-danger">Logout</button>
-        </form>
 
+        <form asp-controller="Home" asp-action="RedirectLogOut" method="post">
+            <button type="submit" id="btnLogOut" class="btn btn-danger m-3">Log Out</button>
+        </form>
     </nav>
 
-    <div class="container">
-        @RenderBody()
-    </div>
 
-    <footer class="bg-dark">
-        <div class="container text-light text-center">
-            <h5 class="p-5 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
-        </div>
-    </footer>
+    @RenderBody()
     @RenderSection("Scripts", required: false)
 </body>
 </html>
