--- a/TermProject/Views/Shared/LoginLayout.cshtml
+++ b/TermProject/Views/Shared/LoginLayout.cshtml
@@ -27,6 +27,11 @@
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link disabled">
+                            Likes
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link disabled">
                             Matches
                         </a>
                     </li>
