--- a/TermProject/Views/Shared/MainLayout.cshtml
+++ b/TermProject/Views/Shared/MainLayout.cshtml
@@ -6,6 +6,7 @@
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
+    <link href="~/css/content.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-black">
@@ -17,48 +18,44 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link active" asp-controller="Home" asp-action="Index" id="lnkHome">Home</a>
+                        <a class="nav-link active" asp-controller="Dashboard" asp-action="Index" id="lnkHome">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a class="nav-link active" asp-controller="Main" asp-action="Index" id="lnkMain">
                             Search
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a href="#" class="nav-link active">
                             Likes
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a href="#" class="nav-link active">
                             Matches
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a href="#" class="nav-link active">
                             Dates
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link disabled">
+                        <a href="#" class="nav-link active">
                             Profile
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
-        <form asp-controller="Home" asp-action="RedirectLogin" method="post">
-            <button type="submit" id="btnLogin" class="btn btn-danger">Login</button>
-        </form>
 
-        <form asp-controller="Home" asp-action="RedirectSignUp" method="post">
-            <button type="submit" id="btnSignup" class="btn btn-danger m-3">Sign-up</button>
+        <form asp-controller="Home" asp-action="RedirectLogOut" method="post">
+            <button type="submit" id="btnLogOut" class="btn btn-danger m-3">Log Out</button>
         </form>
     </nav>
 
-    
-    @RenderBody() 
+
+    @RenderBody()
     @RenderSection("Scripts", required: false)
 </body>
 </html>
-
