Login sign up work

--- a/TermProject/Views/Profile/Index.cshtml
+++ b/TermProject/Views/Profile/Index.cshtml
@@ -26,7 +26,7 @@
             <h4> <p class="card-text">@Model.age</p></h4>
             <br />
             <h4><p class="card-text">@Model.city, @Model.state</p></h4>
-                <br />
+            <br />
             <p class="card-text">@Model.description</p>
 
         </div>
@@ -43,7 +43,7 @@
                 <h4>Commitment Type: </h4><p class="card-text">@Model.commitmentType</p>
                 <h4>Occupation: </h4><p class="card-text">@Model.occupation</p>
                 <h4>Cat or Dog: </h4><p class="card-text">@Model.catOrDog</p>
-            
+
 
 
 
@@ -108,33 +108,18 @@
 </div>
 
 
-<div class="row" style="padding-top: 2%">
 
-    <div class="col-sm-6 mb-4">
-        <div class="card">
-            <div class="card-body">
+<div class="col-sm-4 mb-4" style="padding-top: 2%; margin: 0 auto">
+    <div class="card">
+        <div class="card-body">
 
-                <h2>Favorites: </h2>
-                <h3>Restaurant: </h3> <p class="card-text"> @Model.restaurant</p>
-                <h3>Quote: </h3> <p class="card-text"> @Model.quote</p>
-                <h3>Book: </h3> <p class="card-text"> @Model.book</p>
-                <h3>Movie: </h3> <p class="card-text"> @Model.movie</p>
+            <h2>Favorites: </h2>
+            <h3>Restaurant: </h3> <p class="card-text"> @Model.restaurant</p>
+            <h3>Quote: </h3> <p class="card-text"> @Model.quote</p>
+            <h3>Book: </h3> <p class="card-text"> @Model.book</p>
+            <h3>Movie: </h3> <p class="card-text"> @Model.movie</p>
 
-            </div>
         </div>
     </div>
-
-
-    <div class="col-sm-6 mb-4">
-        <div class="card">
-            <div class="card-body">
-                <br />
-
-                <h4>Dislikes:</h4>
-
-            </div>
-        </div>
-    </div>
-
-
 </div>
+
