--- a/TermProject/Views/SignUp/Index.cshtml
+++ b/TermProject/Views/SignUp/Index.cshtml
@@ -9,6 +9,7 @@
     Layout = "LoginLayout";
 }
 
+
     <form asp-controller="SignUp" asp-action="CreateAccount" method="POST">
         <br />
         <br />
@@ -98,16 +99,23 @@
             </div>
 
         </div>
+
+</form>
+
+<div style="padding:1%">
+    <h3>@ViewBag.UsernameErrorMessage</h3>
+    <h3>@ViewBag.AccountAdded</h3>
+</div>
+
+
+
     <footer class="bg-dark">
         <div class="container text-light text-center">
             <h5 class="p-5 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
         </div>
     </footer>
 
-    </form>
+   
 
-    <div>
-        @ViewBag.UsernameErrorMessage
-        @ViewBag.AccountAdded
-    </div>
+  
 
