--- a/TermProject/Views/Login/Index.cshtml
+++ b/TermProject/Views/Login/Index.cshtml
@@ -44,7 +44,7 @@
         <br />
     </div>
 </div>
-<footer class="bg-dark fixed-bottom">
+<footer class="bg-dark">
     <div class="container text-light text-center">
         <h5 class="p-3 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
     </div>
