--- a/TermProject/Views/Shared/LoggedInLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedInLayout.cshtml
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" asp-controller="Profile" asp-action="Index" id="lnkProfile">
+                        <a class="nav-link active" asp-controller="EditProfile" asp-action="Index" id="lnkProfile">
                             Profile
                         </a>
                     </li>
