--- a/TermProject/Views/Shared/LoggedInLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedInLayout.cshtml
@@ -25,7 +25,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a class="nav-link active" asp-controller="Likes" asp-action="Index" id="lnkLikes">
                             Likes
                         </a>
                     </li>
