--- a/TermProject/Views/Shared/MainLayout.cshtml
+++ b/TermProject/Views/Shared/MainLayout.cshtml
@@ -26,7 +26,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a class="nav-link active" asp-controller="Likes" asp-action="Index" id="lnkLikes">
                             Likes
                         </a>
                     </li>
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a class="nav-link active" asp-controller="EditProfile" asp-action="Index" id="lnkProfile">
                             Profile
                         </a>
                     </li>
