--- a/TermProject/wwwroot/css/content.css
+++ b/TermProject/wwwroot/css/content.css
@@ -1,3 +1,24 @@
 ﻿body {
     background-image: url('hearts1.jpg');
 }
+
+.centdiv {
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top:6rem;
+    margin-bottom: 1rem;
+}
+.centcontent {
+    text-align:center;
+    border: 2px solid black;
+    padding: 50px;
+    margin: 0 auto;
+    max-width: 600px;
+    background-color: pink;
+    width: 80%;
+    height: calc(100vh - 100px);
+    overflow-y: auto;
+}
