Matches and Date Requests

--- a/TermProject/Views/Main/Index.cshtml
+++ b/TermProject/Views/Main/Index.cshtml
@@ -152,3 +152,8 @@
         }
     </div>
 </div>
+        <footer class="bg-dark">
+            <div class="container text-light text-center">
+                <h5 class="p-5 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
+            </div>
+        </footer>
