--- a/TermProject/Views/Shared/LoggedInLayout.cshtml
+++ b/TermProject/Views/Shared/LoggedInLayout.cshtml
@@ -30,7 +30,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a class="nav-link active" asp-controller="Matches" asp-action="Index" id="lnkMatches">
                             Matches
                         </a>
                     </li>
