--- a/TermProject/Views/EditProfile/Index.cshtml
+++ b/TermProject/Views/EditProfile/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProfileModel
+﻿@model TermProjectAPI.User
 @{
     Layout = "MainLayout";
 }
@@ -22,23 +22,23 @@
                 <br />
                 <br />
                 <p>Profile Image:</p>
-                <input asp-for="ProfileImage" />
+                <input asp-for="profileImage" value="@Model.profileImage" />
                 <br />
                 <br />
                 <p>Phone Number:</p>
-                <input asp-for="PhoneNumber" />
+                <input asp-for="phoneNumber" value="@Model.phoneNumber" />
                 <br />
                 <br />
                 <p>Address:</p>
-                <input asp-for="Address" />
+                <input asp-for="address" value="@Model.address" />
                 <br />
                 <br />
                 <p>City</p>
-                <input asp-for="City" />
+                <input asp-for="city" value="@Model.city" />
                 <br />
                 <br />
                 <p>State</p>
-                <select asp-for="State">
+                <select asp-for="state" value="@Model.state">
                     <option> No Selection</option>
                     <option>Alabama</option>
                     <option>Alaska</option>
@@ -95,27 +95,27 @@
                 <br />
                 <br />
                 <p>Occupation:</p>
-                <input asp-for="Occupation" />
+                <input asp-for="occupation" value="@Model.occupation" />
                 <br />
                 <br />
                 <p>Description:</p>
-                <input asp-for="Description" />
+                <input asp-for="description" value="@Model.description" />
                 <br />
                 <br />
                 <p>Age:</p>
-                <input asp-for="Age" />
+                <input asp-for="age" value="@Model.age" />
                 <br />
                 <br />
                 <p>Weight:</p>
-                <input asp-for="Weight" />
+                <input asp-for="weight" value="@Model.weight" />
                 <br />
                 <br />
                 <p>Height (ex: 5.5):</p>
-                <input asp-for="Height" />
+                <input asp-for="height" value="@Model.height" />
                 <br />
                 <br />
                 <p>Cat or Dog?:</p>
-                <select asp-for="CatOrDog">
+                <select asp-for="catOrDog" value="@Model.catOrDog">
                     <option>No Selection</option>
                     <option>Neither</option>
                     <option>Cat</option>
@@ -125,58 +125,64 @@
                 <br />
 
                 <p>What kind of commitment type do you want?:</p>
-                <select asp-for="AccountVisible">
+                <select asp-for="commitmentType" value="@Model.commitmentType">
                     <option>No Selection</option>
                     <option>Friends</option>
                     <option>Relationship</option>
                     <option>Marriage</option>
                     <option>Not Sure</option>
                 </select>
-                <br/>
-                <br/>
+                <br />
+                <br />
                 <br />
                 <h4 style="color:forestgreen">Likes (Add up to 5):</h4>
                 <br />
-                <p>1: <input asp-for="Likes" /></p>
-                <p>2: <input asp-for="Likes" /></p>
-                <p>3: <input asp-for="Likes" /></p>
-                <p>4: <input asp-for="Likes" /></p>
-                <p>5: <input asp-for="Likes" /></p>
+
+                @for (int i = 0; i < Model.likes.Count; i++)
+                {
+                    <p> <input asp-for="likes" value=@Model.likes[i] /></p>
+
+                }
+
+
                 <br />
                 <h4 style="color:red">Dislikes (Add up to 5):</h4>
                 <br />
-                <p>1: <input asp-for="Dislikes" /></p>
-                <p>2: <input asp-for="Dislikes" /></p>
-                <p>3: <input asp-for="Dislikes" /></p>
-                <p>4: <input asp-for="Dislikes" /></p>
-                <p>5: <input asp-for="Dislikes" /></p>
-                <br/>
+                @for (int i = 0; i < Model.dislikes.Count; i++)
+                {
+                    <p> <input asp-for="dislikes" value=@Model.dislikes[i] /></p>
+
+                }
+                <br />
                 <h4 style="color:darkslateblue">Favorites:</h4>
                 <br />
-                <p>Movie: <input asp-for="Movie" /></p>
-                <p>Book: <input asp-for="Book" /></p>
-                <p>Restaurant: <input asp-for="Restaurant" /></p>
-                <p>Quote: <input asp-for="Quote" /></p>
-                <br/>
+                <p>Movie: <input asp-for="movie" value="@Model.movie" /></p>
+                <p>Book: <input asp-for="book" value="@Model.book" /></p>
+                <p>Restaurant: <input asp-for="restaurant" value="@Model.restaurant" /></p>
+                <p>Quote: <input asp-for="quote" value="@Model.quote" /></p>
+                <br />
                 <p>Make My Profile visible to other members?:</p>
-                <select asp-for="CommitmentType">
+                <select asp-for="accountVisible" value="@Model.accountVisible">
                     <option>No</option>
                     <option>Yes</option>
                 </select>
                 <br />
-                <br/>
-                <button type="submit" class="btn btn-danger">Update Profile</button>
-              
-                <button type="button" class="btn btn-danger">Back</button>
-                
-            </div>
-        </div>
-        <footer class="bg-dark">
-            <div class="container text-light text-center">
-                <h5 class="p-5 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
-            </div>
-        </footer>
+                <br />
 
+
+                <button type="submit" class="btn btn-danger">Update Profile</button>
     </form>
+
+    <button type="button" class="btn btn-danger">Back</button>
+
+    </div>
+    </div>
+    <footer class="bg-dark">
+        <div class="container text-light text-center">
+            <h5 class="p-5 mb-3">Copyright © 2024 Love Lounge. All rights reserved.</h5>
+        </div>
+    </footer>
+
+
 </body>
 </html>
