--- a/TermProject/Views/Shared/MainLayout.cshtml
+++ b/TermProject/Views/Shared/MainLayout.cshtml
@@ -42,7 +42,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" asp-controller="EditProfile" asp-action="Index" id="lnkProfile">
-                            Profile
+                            Edit Profile
                         </a>
                     </li>
                 </ul>
